--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Chess Spy</title>
+    <title>Chess Bastard</title>
   </head>
   <body>
       <div id="root"></div>
